--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         //});
     </script>
 
-    <script src="_framework/blazor.webassembly.js" autostart="false"></script>
+    <script src="/_framework/blazor.webassembly.js" autostart="false"></script>
     <script>
         // https://github.com/dotnet/aspnetcore/issues/25165#issuecomment-683403628
         var i = 0;
