--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>Maintech!</title>
+    <title>Maintech</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
     <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
     <!--<link href="css/app.css" rel="stylesheet" />-->
@@ -41,7 +41,7 @@
         //});
     </script>
 
-    <script src="/_framework/blazor.webassembly.js" autostart="false"></script>
+    <script src="_framework/blazor.webassembly.js" autostart="false"></script>
     <script>
         // https://github.com/dotnet/aspnetcore/issues/25165#issuecomment-683403628
         var i = 0;
