--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
-
 <!DOCTYPE html>
 <html>
 
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>Maintech</title>
+    <title>Maintech!</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
     <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
     <!--<link href="css/app.css" rel="stylesheet" />-->
@@ -18,7 +17,7 @@
 <body>
     <div id="app">
         <div style="position:absolute; top:30vh; width:100%; text-align:center">
-            <h1>Maintech!</h1>
+            <h1>~Maintech!~</h1>
             <div style="display:flex; gap:10px; justify-content:center; align-items:center">
                 <div class="spinner-border" role="status"></div>
                 <div name="divProgress">The application is loading...</div>
